recursion.lessons.recursion.tree.Tree.scala.error
Tree:26: error: longueur is already defined as variable longueur
	var longueur = length * shrink;
            ^Tree:33: error: longueur is already defined as variable longueur
	var longueur = length * shrink;
            ^